# Malak-Fahim-s-projects-

./: Chatting.asm
AMIT_FINAL_PROJET/: AMIT_FINAL_PROJET.atsln  AMIT_FINAL_PROJET.c  AMIT_FINAL_PROJET.cproj  GPIO.c  GPIO.h  LED.c  LED.h  LED_cfg.c  LED_cfg.h  hc05.h  lcd.c  lcd.h  ldr.c  ldr.h  ldr_cfg.c  ldr_cfg.h  pir.c  pir.h  pir_cfg.c  pir_cfg.h  sound.c  sound.h  sound_cfg.c  sound_cfg.h  usart.h
AMIT_FINAL_PROJET/Debug/: AMIT_FINAL_PROJET.d  AMIT_FINAL_PROJET.hex  AMIT_FINAL_PROJET.lss  AMIT_FINAL_PROJET.map  AMIT_FINAL_PROJET.srec  GPIO.d  LED.d  LED_cfg.d  Makefile  ldr.d  ldr_cfg.d  makedep.mk  pir.d  pir_cfg.d  sound.d  sound_cfg.d
Compression_Multimedia_Project_2016/: ConsoleApplication2.7z  MTF compression.txt  out_comp.txt
Compression_Multimedia_Project_2016/Multmedia project/: MTF compression with output text.txt  banana .txt  banana decompression.txt  mtfdecomp.txt
Compression_Multimedia_Project_2016/test/: test.7z
Graphics Ice tower/: CMakeLists.txt
Graphics Ice tower/Draw_cube/: Draw_cube  Draw_cube.cpp  TransformVertexShader.vertexshader
Graphics Ice tower/Model_loading/: Cylinder_Hell.mtl  Model_loading  Model_loading.cpp  Model_loading.cpp.Bw2323  StandardShading.fragmentshader  StandardShading.fragmentshader~  TextureFragmentShader.fragmentshader~  TransformVertexShader.vertexshader~  Untitled.mtl
Graphics Ice tower/common/: controls.cpp
Identify Shapes/: deleteColumns.py  feature_extractor.py  features.csv
Micro Who is the smarter/: Final.rar  Recieve.asm  Send.asm
P&G project/: AMIT_FINAL_PROJET.atsln  AMIT_FINAL_PROJET.atsuo  AMIT_FINAL_PROJET.c  AMIT_FINAL_PROJET.cproj  GPIO.c  GPIO.h  LED.c  LED.h  LED_cfg.c  LED_cfg.h  hc05.h  lcd.c  lcd.h  ldr.c  ldr.h  ldr_cfg.c  ldr_cfg.h  pir.c  pir.h  pir_cfg.c  pir_cfg.h  sound.c  sound.h  sound_cfg.c  sound_cfg.h  usart.h
Project/: IR-Design.docx  Opcodes1.xlsx
WebSearchEngine/: ComplexInsert.java  CrawlerDataLoader.java  Indexer_Ranker.java  PorterStemmer.java  Program.java  QueryServlet.java  RobotTxtHandler.java  UrlNormalizer.java  WebSearchEngineMain.java  crawlThread.java  databaseManager.java  httpRequestHandler.java  queryManager.java  webCrawler.java
si_channel2/: Add_Delete_user.java  Add_Inst.java  Add_Survey.java  Add_student.java  Admin_info.java  Comment_Adapter.java  DB_Manager.java  Disc_frag.java  Home.java  IA_Survey_frag.java  IA_info_adapter.java  Info_Frags.java  MainActivity.java  Post_Comment.java  Query_Manager.java  Question_Viewer.java  Student_Survey_frag.java  ViewPagerAdapter.java  stat_viewer.java  stud_info_adapter.java  student_survey_list_adapter.java  survey_list_adapter.java
(+296 files in other folders)
